2015-07-09  Oliver Kiddle  <opk@zsh.org>

	* 35748: Completion/Zsh/Type/_ps1234,
	Completion/Zsh/Command/_print: fixes to prompt spec completion
	where it contains date formats

	* 35749: (c.f. Jun T: 35732): Completion/Unix/Type/_date_formats:
	fix exclusion list for flags/modifiers

2015-07-08  Oliver Kiddle  <opk@zsh.org>

	* 35729: Completion/Zsh/Command/_compadd: new compadd completion

	* Matthew Martin: 35727: Completion/Unix/Type/_diff_options:
	support OpenBSD for diff options

2015-07-07  Oliver Kiddle  <opk@zsh.org>

	* 35700: Completion/Unix/Type/_date_formats: complete OS specific
	date format specifiers and put % in a prefix

	* 35718: Completion/Unix/Command/_find, Completion/Unix/Type/_dates,
	Completion/Zsh/Type/_globquals: new calendar style date completion

2015-07-07  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Src/Zle/complete.c: remove compiler warning.

2015-07-06  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Doc/Zsh/expn.yo: alphabetize ${(b)...} flag

	* 35709: Doc/Zsh/expn.yo: explain :s/// modifier contexts

	* 35694: Src/subst.c, Test/D04parameter.ztst: fix handling of
	history modifiers (specifically :s/l/r/) when applied across all
	elements of an array parameter value

2015-07-06  Oliver Kiddle  <opk@zsh.org>

	* 35704: Doc/Zsh/compwid.yo, Src/Zle/compcore.c, Src/Zle/complete.c:
	compadd -E 0 should imply -J and -2

2015-07-06  Mikael Magnusson  <mikachu@gmail.com>

	* 35696: Completion/Unix/Type/_ps1234: complete colors for %F{
	and %K{

	* 35697: Completion/Unix/Type/_date_formats,
	Completion/Unix/Type/_ps1234: Complete strftime formats for %D{}

2015-07-06  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 35441: Etc/zsh-development-guide: Make devs' ChangeLog
	generator scripts discoverable

2015-07-05  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 35692: Src/Zle/computil.c: cfp_matcher_range used wrong raw
	character if it couldn't be converted to wchar_t.
